--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,14 +2,14 @@
 # Main entry point for Rocky Linux Security Hardening Role
 
 - name: Initialize audit results variable
-  set_fact:
+  ansible.builtin.set_fact:
     audit_results: []
     audit_violations: []
   tags:
     - always
 
 - name: Display role execution mode
-  debug:
+  ansible.builtin.debug:
     msg: "Rocky Linux Security Hardening Role - Starting execution"
   tags:
     - always
@@ -19,35 +19,35 @@
 # ==============================
 
 - name: Include SELinux hardening tasks
-  include_tasks: selinux.yml
+  ansible.builtin.include_tasks: selinux.yml
   when: enable_selinux_hardening | bool
   tags:
     - hardening
     - selinux
 
 - name: Include Firewall hardening tasks
-  include_tasks: firewall.yml
+  ansible.builtin.include_tasks: firewall.yml
   when: enable_firewall_hardening | bool
   tags:
     - hardening
     - firewall
 
 - name: Include Umask hardening tasks
-  include_tasks: umask.yml
+  ansible.builtin.include_tasks: umask.yml
   when: enable_umask_hardening | bool
   tags:
     - hardening
     - umask
 
 - name: Include Mounts hardening tasks
-  include_tasks: mounts.yml
+  ansible.builtin.include_tasks: mounts.yml
   when: enable_mounts_hardening | bool
   tags:
     - hardening
     - mounts
 
 - name: Include DNF hardening tasks
-  include_tasks: dnf.yml
+  ansible.builtin.include_tasks: dnf.yml
   when: enable_dnf_hardening | bool
   tags:
     - hardening
@@ -58,35 +58,35 @@
 # ==============================
 
 - name: Include SELinux audit tasks
-  include_tasks: audit_selinux.yml
+  ansible.builtin.include_tasks: audit_selinux.yml
   when: enable_selinux_audit | bool
   tags:
     - audit
     - audit_selinux
 
 - name: Include Firewall audit tasks
-  include_tasks: audit_firewall.yml
+  ansible.builtin.include_tasks: audit_firewall.yml
   when: enable_firewall_audit | bool
   tags:
     - audit
     - audit_firewall
 
 - name: Include Umask audit tasks
-  include_tasks: audit_umask.yml
+  ansible.builtin.include_tasks: audit_umask.yml
   when: enable_umask_audit | bool
   tags:
     - audit
     - audit_umask
 
 - name: Include Mounts audit tasks
-  include_tasks: audit_mounts.yml
+  ansible.builtin.include_tasks: audit_mounts.yml
   when: enable_mounts_audit | bool
   tags:
     - audit
     - audit_mounts
 
 - name: Include DNF audit tasks
-  include_tasks: audit_dnf.yml
+  ansible.builtin.include_tasks: audit_dnf.yml
   when: enable_dnf_audit | bool
   tags:
     - audit
@@ -97,9 +97,13 @@
 # ==============================
 
 - name: Generate audit report
+  when: audit_results is defined
+  tags:
+    - audit
+    - report
   block:
     - name: Create audit report
-      copy:
+      ansible.builtin.copy:
         content: |
           ================================================================================
           ROCKY LINUX SECURITY AUDIT REPORT
@@ -125,7 +129,7 @@
           - {{ violation }}
           {% endfor %}
           {% else %}
-          ✓ All checks passed. System is compliant.
+          All checks passed. System is compliant.
           {% endif %}
           ================================================================================
         dest: "{{ audit_report_path }}"
@@ -133,11 +137,11 @@
       delegate_to: localhost
 
     - name: Display audit report location
-      debug:
+      ansible.builtin.debug:
         msg: "Audit report generated at: {{ audit_report_path }}"
 
     - name: Display audit summary
-      debug:
+      ansible.builtin.debug:
         msg: |
           Audit Summary:
           - Total Checks: {{ audit_results | length }}
@@ -149,13 +153,8 @@
           {% endif %}
 
     - name: Fail if violations found and audit_fail_on_violations is true
-      fail:
+      ansible.builtin.fail:
         msg: "Security audit failed with {{ audit_violations | length }} violation(s)"
       when:
         - audit_fail_on_violations | bool
         - audit_violations | length > 0
-
-  when: audit_results is defined
-  tags:
-    - audit
-    - report
