--- a/tasks/mounts.yml
+++ b/tasks/mounts.yml
@@ -2,11 +2,11 @@
 # Mounts and Filesystem Hardening Tasks
 
 - name: Mounts | Get current mount information
-  set_fact:
+  ansible.builtin.set_fact:
     current_mounts: "{{ ansible_mounts }}"
 
 - name: Mounts | Configure secure mount options in /etc/fstab
-  mount:
+  ansible.posix.mount:
     path: "{{ item.path }}"
     src: "{{ item.src | default(omit) }}"
     fstype: "{{ item.fstype }}"
@@ -17,23 +17,28 @@
   register: mount_changes
 
 - name: Mounts | Remount filesystems with new options
-  command: "mount -o remount {{ item.item.path }}"
+  ansible.posix.mount:
+    path: "{{ item.item.path }}"
+    state: remounted
   loop: "{{ mount_changes.results }}"
   when:
     - mount_changes is defined
     - item.changed
-  changed_when: true
 
 - name: Mounts | Ensure /tmp is mounted with secure options
   block:
     - name: Check if /tmp is a separate partition
-      shell: "mount | grep -E '^.* on /tmp '"
+      ansible.builtin.shell: |
+        set -o pipefail
+        mount | grep -E '^.* on /tmp '
+      args:
+        executable: /bin/bash
       register: tmp_mount_check
       failed_when: false
       changed_when: false
 
     - name: Create systemd tmp.mount if /tmp is not separate
-      copy:
+      ansible.builtin.copy:
         content: |
           [Unit]
           Description=Temporary Directory
@@ -55,8 +60,8 @@
       when: tmp_mount_check.rc != 0
       register: tmp_mount_unit
 
-    - name: Enable and start tmp.mount
-      systemd:
+    - name: Enable and start tmp.mount  # noqa: no-handler
+      ansible.builtin.systemd:
         name: tmp.mount
         enabled: true
         state: started
@@ -64,11 +69,11 @@
       when: tmp_mount_unit is changed
 
 - name: Mounts | Check filesystem disk space
-  set_fact:
+  ansible.builtin.set_fact:
     filesystem_space_violations: []
 
 - name: Mounts | Verify minimum free space requirements
-  set_fact:
+  ansible.builtin.set_fact:
     filesystem_space_violations: "{{ filesystem_space_violations + [item.key] }}"
   loop: "{{ ansible_mounts | selectattr('mount', 'in', filesystem_min_free_percent.keys()) | list }}"
   when:
@@ -77,11 +82,11 @@
     - ((item.size_available / item.size_total * 100) | int) < filesystem_min_free_percent[item.mount]
 
 - name: Mounts | Display filesystem space warnings
-  debug:
+  ansible.builtin.debug:
     msg: "WARNING: Filesystem {{ item }} has less than {{ filesystem_min_free_percent[item] }}% free space"
   loop: "{{ filesystem_space_violations }}"
   when: filesystem_space_violations | length > 0
 
 - name: Mounts | Display configuration status
-  debug:
+  ansible.builtin.debug:
     msg: "Mounts hardening completed - {{ secure_mount_options | length }} mount points configured"
