--- a/tasks/umask.yml
+++ b/tasks/umask.yml
@@ -2,7 +2,7 @@
 # Umask Hardening Tasks
 
 - name: Umask | Configure default umask in /etc/profile
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: /etc/profile
     regexp: '^\s*umask\s+'
     line: "umask {{ default_umask }}"
@@ -11,7 +11,7 @@
     backup: true
 
 - name: Umask | Configure default umask in /etc/bashrc
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: /etc/bashrc
     regexp: '^\s*umask\s+'
     line: "umask {{ default_umask }}"
@@ -20,7 +20,7 @@
     backup: true
 
 - name: Umask | Configure umask in additional config files
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: "{{ item }}"
     regexp: '^\s*umask\s+'
     line: "umask {{ default_umask }}"
@@ -31,7 +31,7 @@
   when: umask_config_files is defined
 
 - name: Umask | Configure umask in /etc/login.defs
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: /etc/login.defs
     regexp: '^UMASK\s+'
     line: "UMASK {{ default_umask }}"
@@ -39,7 +39,7 @@
     backup: true
 
 - name: Umask | Configure root umask in /root/.bashrc
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: /root/.bashrc
     regexp: '^\s*umask\s+'
     line: "umask {{ root_umask }}"
@@ -49,19 +49,14 @@
     backup: true
 
 - name: Umask | Set umask for systemd services
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: /etc/systemd/system.conf
     regexp: '^#?UMask='
     line: "UMask={{ default_umask }}"
     state: present
     backup: true
-  register: systemd_umask
-
-- name: Umask | Reload systemd if configuration changed
-  systemd:
-    daemon_reexec: true
-  when: systemd_umask.changed
+  notify: Reload systemd
 
 - name: Umask | Display configuration status
-  debug:
+  ansible.builtin.debug:
     msg: "Umask hardening completed - Default: {{ default_umask }}, Root: {{ root_umask }}"
