--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 # Ansible Konfiguration für Rocky Linux Hardening Role
+nocows = True
 
 # Inventory-Datei (Standard: localhost)
 inventory = inventory.ini
